--- a/views/admin/products-update.html
+++ b/views/admin/products-update.html
@@ -45,7 +45,7 @@
               <input type="number" class="form-control" id="weight" name="weight" step="0.01" placeholder="0.00" value="{$product.weight}">
             </div>
             <div class="form-group">
-              <label for="file">Foto</label>
+              <label for="file">Photo</label>
               <input type="file" class="form-control" id="file" name="file" value="{$product.weight}">
               <div class="box box-widget">
                 <div class="box-body">
@@ -57,7 +57,7 @@
           </div>
           <!-- /.box-body -->
           <div class="box-footer">
-            <button type="submit" class="btn btn-primary">Salvar</button>
+            <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </form>
       </div>
