--- a/views/admin/products-update.html
+++ b/views/admin/products-update.html
@@ -45,6 +45,10 @@
               <input type="number" class="form-control" id="weight" name="weight" step="0.01" placeholder="0.00" value="{$product.weight}">
             </div>
             <div class="form-group">
+              <label for="url">URL</label>
+              <input type="text" class="form-control" id="url" name="url" step="0.01" placeholder="URL" value="{$product.url}">
+            </div>
+            <div class="form-group">
               <label for="file">Photo</label>
               <input type="file" class="form-control" id="file" name="file" value="{$product.weight}">
               <div class="box box-widget">
