--- a/views/header.html
+++ b/views/header.html
@@ -40,10 +40,15 @@
                 <div class="col-md-8">
                     <div class="user-menu">
                         <ul>
-                            <li><a href="#"><i class="fa fa-user"></i> Minha Conta</a></li>
-                            <li><a href="#"><i class="fa fa-heart"></i> Lista de Desejos</a></li>
-                            <li><a href="#"><i class="fa fa-shopping-cart"></i> Meu Carrinho</a></li>
-                            <li><a href="#"><i class="fa fa-lock"></i> Login</a></li>
+                            <li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
+                            <li><a href="#"><i class="fa fa-heart"></i> Wish List</a></li>
+                            <li><a href="/cart"><i class="fa fa-shopping-cart"></i> My Cart</a></li>
+                            {if="checkLogin(false)"}
+                                <li><a href="/profile"><i class="fa fa-shopping-cart"></i> {function="getUsernamePerson()"}</a></li>
+                                <li><a href="/logout"><i class="fa fa-shopping-cart"></i> Logout</a></li>
+                            {else}
+                                <li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
+                            {/if}
                         </ul>
                     </div>
                 </div>
