--- a/views/checkout.html
+++ b/views/checkout.html
@@ -16,87 +16,94 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="product-content-right">
-					<form action="/checkout" class="checkout" method="post" name="checkout">
+					<form  action="/checkout" class="checkout" method="post" name="checkout">
 						<div id="customer_details" class="col2-set">
 							<div class="row">
 								<div class="col-md-12">
-
+									{if="$error != ''"}
 									<div class="alert alert-danger">
-										Error!
+										{$error}
 									</div>
-
+									{/if}
 									<div class="woocommerce-billing-fields">
-										<h3>Endereço de entrega</h3>
-										<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_address_1">Cep <abbr title="required" class="required">*</abbr>
+										<h3>Shipping address</h3>
+										<p id="zipCodeField" class="form-row form-row-wide address-field validate-required">
+											<label class="" for="zipCode">Zip Code <abbr title="required" class="required">*</abbr>
 											</label>
-                                            <input type="text" value="{$cart.deszipcode}" placeholder="00000-000" id="billing_address_1" name="zipcode" class="input-text ">
+                                            <input type="text" value="{$address.zipCode}" placeholder="00000-000" id="zipCode" name="zipCode" class="input-text ">
                                             <input type="submit" value="Atualizar CEP" id="place_order" class="button alt" formaction="/checkout" formmethod="get">
 										</p>
-										<p id="billing_address_1_field" class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_address_1">Endereço <abbr title="required" class="required">*</abbr>
+										<p id="addressField" class="form-row form-row-wide address-field validate-required">
+											<label class="" for="address">Address <abbr title="required" class="required">*</abbr>
 											</label>
-											<input type="text" value="{$address.desaddress}" placeholder="Logradouro, número e bairro" id="billing_address_1" name="desaddress" class="input-text ">
+											<input type="text" value="{$address.address}" placeholder="Address, number and district" id="address" name="address" class="input-text ">
 										</p>
-										<p id="billing_address_2_field" class="form-row form-row-wide address-field">
-											<input type="text" value="{$address.descomplement}" placeholder="Complemento (opcional)" id="billing_address_2" name="descomplement" class="input-text ">
+										<p id="complementField" class="form-row form-row-wide address-field">
+											<label class="" for="complement">Complement <abbr title="required" class="required">*</abbr>
+											</label>
+											<input type="text" value="{$address.complement}" placeholder="Complement (Optional)" id="complement" name="complement" class="input-text ">
                                         </p>
-                                        <p id="billing_district_field" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_district">Bairro <abbr title="required" class="required">*</abbr>
+										<p id="residenceNumberField" class="form-row form-row-wide address-field">
+											<label class="" for="residenceNumber">Residence Number <abbr title="required" class="required">*</abbr>
 											</label>
-											<input type="text" value="{$address.desdistrict}" placeholder="Cidade" id="billing_district" name="desdistrict" class="input-text ">
-										</p>
-										<p id="billing_city_field" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
-											<label class="" for="billing_city">Cidade <abbr title="required" class="required">*</abbr>
+											<input type="text" placeholder="Residence Number" id="residenceNumber" name="residenceNumber" class="input-text ">
+                                        </p>
+                                        <p id="districtField" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
+											<label class="" for="district">District <abbr title="required" class="required">*</abbr>
 											</label>
-											<input type="text" value="{$address.descity}" placeholder="Cidade" id="billing_city" name="descity" class="input-text ">
+											<input type="text" placeholder="district" id="district" name="district" class="input-text ">
 										</p>
-										<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
-											<label class="" for="billing_state">Estado</label>
-											<input type="text" id="billing_state" name="desstate" placeholder="Estado" value="{$address.desstate}" class="input-text ">
+										<p id="cityField" class="form-row form-row-wide address-field validate-required" data-o_class="form-row form-row-wide address-field validate-required">
+											<label class="" for="city">City <abbr title="required" class="required">*</abbr>
+											</label>
+											<input type="text" value="{$address.city}" placeholder="City" id="city" name="city"  class="input-text">
 										</p>
-										<p id="billing_state_field" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
-											<label class="" for="billing_state">País</label>
-											<input type="text" id="billing_state" name="descountry" placeholder="País" value="{$address.descountry}" class="input-text ">
+										<p id="stateField" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
+											<label class="" for="state">State</label>
+											<input type="text" id="state" name="state" placeholder="State" value="{$address.state}" class="input-text ">
+										</p>
+										<p id="countryField" class="form-row form-row-first address-field validate-state" data-o_class="form-row form-row-first address-field validate-state">
+											<label class="" for="country">Country</label>
+											<input type="text" id="country" name="country" placeholder="Country" value="{$address.country}" class="input-text ">
 										</p>
 										<div class="clear"></div>
-										<h3 id="order_review_heading" style="margin-top:30px;">Detalhes do Pedido</h3>
+										<h3 id="order_review_heading" style="margin-top:30px;">Detail</h3>
 										<div id="order_review" style="position: relative;">
 											<table class="shop_table">
 												<thead>
 													<tr>
-														<th class="product-name">Produto</th>
+														<th class="product-name">Products</th>
 														<th class="product-total">Total</th>
 													</tr>
 												</thead>
 												<tbody>
-                                                    
+                                                    {loop="$products"}
 													<tr class="cart_item">
 														<td class="product-name">
-															Ship Your Idea <strong class="product-quantity">× 1</strong> 
+															{$value.name} <strong class="product-quantity">× {$value.amount}</strong> 
 														</td>
 														<td class="product-total">
-															<span class="amount">$700.00</span>
+															<span class="amount">{$value.price}</span>
 														</td>
                                                     </tr>
-                                                    
+                                                    {/loop}
 												</tbody>
 												<tfoot>
 													<tr class="cart-subtotal">
 														<th>Subtotal</th>
-														<td><span class="amount">$700.00</span>
+														<td><span class="amount">{$totals.subTotal}</span>
 														</td>
 													</tr>
 													<tr class="shipping">
-														<th>Frete</th>
+														<th>Freight</th>
 														<td>
-															$5.00
+															{$cartFreight}
 															<input type="hidden" class="shipping_method" value="free_shipping" id="shipping_method_0" data-index="0" name="shipping_method[0]">
 														</td>
 													</tr>
 													<tr class="order-total">
-														<th>Total do Pedido</th>
-														<td><strong><span class="amount">$705.00</span></strong> </td>
+														<th>Total</th>
+														<td><strong><span class="amount">{$totals.total}</span></strong> </td>
 													</tr>
 												</tfoot>
 											</table>
